--- a/styles/index.css
+++ b/styles/index.css
@@ -16,7 +16,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 50px;
+  height: 10vh;
   width: 100%;
 }
 
@@ -154,6 +154,7 @@ a {
   color: black;
 }
 section {
+  height: 90vh;
   display: flex;
   flex-direction: column;
 }
@@ -170,10 +171,14 @@ section {
 
 
 .features_section {
+  justify-content: center;
+  align-items: center;
   background-color: var(--LIGHT_GRAY);
 }
 
-.poll_section {
+.subscriptions_section {
+  justify-content: center;
+  align-items: center;
   background-color: var(--LIGHT_PURPLE);
 }
 .section_header {
@@ -181,13 +186,8 @@ section {
   justify-content: flex-start;
   padding-left: 50px;
   align-items: center;
-  height: 10%;
+  height: 10vh;
   background-color: var(--OFF_WHITE);
-}
-
-.section_content {
-  height: 90%;
-  width: 100%;
 }
 
 #home_content {
@@ -201,6 +201,77 @@ section {
 .about_section_box {
   padding: 30px
 }
+
+#features_content {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+#subscriptions_content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.feature_container {
+  width: 20%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
+.feature_container h3, .feature_container p {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+.feature_container h3 {
+  font-size: 22px;
+}
+
+.feature_container p {
+  font-style: italic;
+}
+
+.feature_img {
+  width: 80%;
+  height: 60%;
+}
+
+table {
+  width: 90%;
+  border: 1px solid black;
+  background-color: white;
+  border-radius: 10px;
+}
+
+td, tr, th {
+  border: 1px solid black;
+}
+
+td {
+  text-align: left;
+  padding: 10px;
+  min-width: 50px;
+}
+
+.bold {
+  font-weight: 600;
+}
+
+.checkbox {
+  text-align: center;
+}
+
 
 @media (max-width: 599px) {
   nav {
